nginx-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
    - image: nginx
      name: nginx
      # command: ["sleep", "5000"] -> docker - ENTRYPOINT
      # args: ["5000"] -> docker - CMD
      # ports:
      #   - containerPort: 8080
      # envFrom:
      #   - configMapRef:
      #       name: custom-config-map
      # OR
      # env:
      #   name: POD_KEY_1
      #   valueFrom:
      #     configMapKeyRef:
      #       name: custom-config-map
      #       key: KEY_1
      resources:
        requests:
          memory: "64Mi"
          cpu: "0.5"
        limits:
          memory: "128Mi"
          cpu: "1"
      # readinessProbe Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
      readinessProbe:
        exec:
          command:
          - cat
          - /tmp/healthy
      volumeMounts:
      - mountPath: /foo
        name: example-volume
        readOnly: true # optional
  serviceAccount: default
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  # tolerations Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
  tolerations:
  - key: "example-key"
    operator: "Exists"
    effect: "NoSchedule"
  # node affiniy Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity
  affinity: 
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: topology.kubernetes.io/zone
            operator: In
            values:
            - antarctica-east1
  volumes:
  - name: example-volume
    # mount /data/foo, but only if that directory already exists
    hostPath:
      path: /data/foo # directory location on host
      type: Directory # this field is optional
status: {}
